--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Theta Psi Alumni Chapter"
 description              : "A Pi Kappa Phi Alumni Chapter"
-url                      : "https://lowlydba.github.io"
-baseurl                  : "/mm-github-pages-starter"
+url                      : "https://beta.thetapsi.org"
+baseurl                  : # if site is not in root, i.e. www.site.com/blogs
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : "/assets/images/logo.svg"
