--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,11 +8,7 @@ main:
     url: "/news"
   - title: "Contact Us"
     url: "/contact-us"
-  - title: "Pay Dues"
-    url: "/dues"
-  - title: "Member Directory"
-    url: "#"
-  - title: "Bylaws"
-    url: "/assets/pdf/Theta_Psi_Alumni_Chapter_Bylaws.pdf"
+  - title: "Members"
+    url: "/members"
   # - title: "Sitemap"
   #   url: /sitemap/
