--- a/_config.yml
+++ b/_config.yml
@@ -259,7 +259,12 @@ compress_html:
   clippings: all
   ignore:
     envs: development
-
+  
+# Collections
+collections:
+  members:
+    output: true
+    permalink: /:collection/:path/
 
 # Defaults
 defaults:
@@ -270,13 +275,16 @@ defaults:
     values:
       layout: single
       author_profile: false
-      read_time: true
+      read_time: false
       comments: # true
-      share: true
-      related: true
-
-# Collections
-collections:
-  members:
-    output: true
-    permalink: /:collection/:path/
+      share: false
+      related: false
+  # _members
+  - scope:
+      path: ""
+      type: members
+    values:
+      layout: single
+      author_profile: false
+      share: false
+      comments: false
