add ungergrad link to nav

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,5 +10,7 @@ main:
     url: "/contact-us"
   - title: "Members"
     url: "/members"
+  - title: "Undergrad Chapter"
+    url: "https://ritpikapp.org/"
   # - title: "Sitemap"
   #   url: /sitemap/
