--- a/_data/member_bios.yml
+++ b/_data/member_bios.yml
@@ -1,8 +1,6 @@
-John McCall:
-  name: John McCall
+- name: John McCall
   initiation_number: 8
   linkedin_url: https://www.linkedin.com/in/johnhmccall/
-John McCall:
-  name: John McCall
+- name: John McCall
   initiation_number: 7
   linkedin_url: https://www.linkedin.com/in/johnhmccall/
