--- a/_data/member_bios.yml
+++ b/_data/member_bios.yml
@@ -1,6 +1,24 @@
+- name: Grant Batchelor
+  initiation_number: 1
+  linkedin_url: https://www.linkedin.com/in/grantbatchelor/
+- name: Elliott Eskra
+  initiation_number: 2
+  linkedin_url: https://www.linkedin.com/in/elliott-eskra-2694348/
+- name: Drew Lierheimer
+  initiation_number: 3
+  linkedin_url: https://www.linkedin.com/in/drew-lierheimer-5a714320/
+- name: Bryan Delaney
+  initiation_number: 4
+  linkedin_url: https://www.linkedin.com/in/delaneybd/
+- name: Nathaniel Fox
+  initiation_number: 5
+  linkedin_url: https://www.linkedin.com/in/nathaniel-r-fox-7b096615/
+- name: Thomas Rogers
+  initiation_number: 6
+  linkedin_url: https://www.linkedin.com/in/thomas-rogers-853a2b197/
+- name: Ryan Duffy
+  initiation_number: 7
+  linkedin_url: https://www.linkedin.com/in/duffyryan/
 - name: John McCall
   initiation_number: 8
-  linkedin_url: https://www.linkedin.com/in/johnhmccall/
-- name: John McCall
-  initiation_number: 7
   linkedin_url: https://www.linkedin.com/in/johnhmccall/
