--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -50,6 +50,7 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v3.14.0
         env:
+          LINTER_RULES_PATH: .github/workflows/lint_conf
           VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
