--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
   - title: "Donate"
-    url: "#"
+    url: "/donate"
   - title: "Get Involved"
     url: "/get-involved"
   - title: "News"
