--- a/_config.yml
+++ b/_config.yml
@@ -137,6 +137,7 @@ footer:
 # Donation Links
 donate_general: https://www.paypal.com/donate?hosted_button_id=YR7HRB5XCVHNJ
 donate_53fund: https://www.paypal.com/donate/?hosted_button_id=69SJ3XEVEWW2N
+donate_rit: https://www.rit.edu/giving/pkpgiving
 
 # Reading Files
 include:
